# flow_stability

./: .gitignore  .readthedocs.yaml  AUTHORS  CHANGELOG.md  FlowStability.py  README.md  SPA.cpp  SPA.h  SPA.pxd  SparseStochMat.py  SynthTempNetwork.py  TemporalNetwork.py  TemporalStability.py  _cython_fast_funcs.pyx  _cython_sparse_stoch.pyx  asymmetric_example.ipynb  data.json  example.py  non_stationary_example.ipynb  parallel_clustering.py  parallel_expm.py  pyproject.toml  requirements.txt  setup.py
.chglog/: CHANGELOG.tpl.md  config.yml
.github/workflows/: build-docs.yml  build_joss_paper.yml  dev_tests.yml  development.yml  initiate_version_release.yml  preview-docs.yml  preview_docs.yml  publish_version_build.yml  publish_version_enforce.yml  publish_version_merging.yml  report_coverage.yml
doc/: requirements.txt
doc/source/: conf.py  index.md  quickstart.md
docs/: conf.py  index.md  quickstart.md  requirements.txt
docs/source/: .conf.py.swp
examples/: asymmetric_example.ipynb  micenet_run_scripts.sh  wild mice network.ipynb  wild_mice_network.ipynb
examples/AntsActivityCycles/: README.md  analyze_ant_interactions.py
examples/basics/: minimal_example.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_793266eafb90970e_run_clusterings_py.html  z_793266eafb90970e_run_cov_integrals_py.html  z_793266eafb90970e_run_laplacians_transmats_py.html  z_d11dc94abec8c70d_FlowStability_py.html  z_d11dc94abec8c70d_SparseStochMat_py.html  z_d11dc94abec8c70d_SynthTempNetwork_py.html  z_d11dc94abec8c70d_TemporalNetwork_py.html  z_d11dc94abec8c70d__cython_sparse_stoch_subst_py.html  z_d11dc94abec8c70d__cython_subst_py.html  z_d11dc94abec8c70d_flow_stability_py.html  z_d11dc94abec8c70d_helpers_py.html  z_d11dc94abec8c70d_logger_py.html  z_d11dc94abec8c70d_network_clustering_py.html  z_d11dc94abec8c70d_parallel_clustering_py.html  z_d11dc94abec8c70d_parallel_expm_py.html  z_d11dc94abec8c70d_sparse_stoch_mat_py.html  z_d11dc94abec8c70d_state_tracking_py.html  z_d11dc94abec8c70d_synth_temp_network_py.html  z_d11dc94abec8c70d_temporal_network_py.html
paper/: paper.bib  paper.md
parallel_scripts/: run_clusterings.py  run_cov_integrals.py  run_laplacians_transmats.py
requirements/: base.txt  mkl.txt
src/flow_stability/: FlowStability.py  SparseStochMat.py  TemporalNetwork.py  _cython_sparse_stoch.pyx  parallel_clustering.py
src/flow_stability/scripts/: run_clusterings.py  run_cov_integrals.py  run_laplacians_transmats.py
src/flowstab/: FlowStability.py  SPA.pxd  SparseStochMat.py  SynthTempNetwork.py  TemporalNetwork.py  __init__.py  _cython_fast_funcs.pyx  _cython_sparse_stoch.pyx  _cython_sparse_stoch_subst.py  _cython_subst.py  _state_tracking.py  flow_stability.py  helpers.py  logger.py  network_clustering.py  parallel_clustering.py  parallel_expm.py  sparse_accumulator.cpp  sparse_accumulator.h  sparse_accumulator.pxd  sparse_stoch_mat.py  state_tracking.py  temporal_network.py
src/flowstab/scripts/: run_clusterings.py  run_cov_integrals.py  run_laplacians_transmats.py
src/flowstab/temporal_network/: __init__.py  temporal_network.py  temporal_network_internal.py
tests/: conftest.py  requirements.txt  test_cython_fast_funcs.py  test_cython_subst.py  test_flow_stability.py  test_helpers.py  test_logger.py  test_network_clustering.py  test_parallel_clustering.py  test_parallel_expm.py  test_sparce_stoch_matrix.py  test_sparse_stoch_matrix.py  test_state_tracking.py  test_synth_temp_nw.py  test_temporal_network.py
