[project]
name = "flowstab"
# version = "2.0.0-rc.1"
authors = [
    {name="Alexandre Bovet", email="alexandre.bovet@uzh.ch"},
]
description = "Framework for dynamic community detection in temporal networks."
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
]
# Fields to be filled by the build backend
dynamic = ["version", "readme", "dependencies", "optional-dependencies"]

[project.scripts]
run_clusterings = "flowstab.scripts.run_clusterings:main"
run_cov_integrals = "flowstab.scripts.run_cov_integrals:main"
run_laplacians_transmats = "flowstab.scripts.run_laplacians_transmats:main"

[project.urls]
Homepage = "https://github.com/alexbovet/flow_stability"
Repository = "https://github.com/alexbovet/flow_stability.git"
Documentation = "https://flow-stability.readthedocs.io/"
Issues = "https://github.com/alexbovet/flow_stability/issues"

[tool.setuptools.dynamic.readme]
file = ["README.md"]

[tool.setuptools.dynamic.dependencies]
file = ["requirements/base.txt"]

[tool.setuptools.dynamic.optional-dependencies.mkl]
file = ["requirements/mkl.txt"]

[tool.setuptools.dynamic.optional-dependencies.testing]
file = ["tests/requirements.txt"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["flowstab", "flowstab.scripts"]

[tool.setuptools_scm]
[build-system]
requires = [
  "numpy",
  "setuptools>=77.0.3",
  "setuptools_scm>=8",
  "cython",
]
build-backend = "setuptools.build_meta"

# config for the test coverage
[tool.coverage.run]
relative_files = true
# plugins = ["Cython.Coverage", ]
source = ["src/flowstab", ]
omit = [
  "tests",
  "*__init__.py",
  ]
[tool.coverage.paths]
source = [
  "src/flowstab/", 
  "venv/lib/python*/site-packages/flowstab/"
  ]

# This is for the linting with ruff
[tool.ruff]
target-version = "py39"
[tool.ruff.lint]
# T201: complain about print statements
ignore = ["T201"]
[tool.ruff.lint.per-file-ignores]
# we want to accept import violations in special contexts
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]
